# TOP_Project

./: .gitignore  CMakeLists.txt  Notes.md
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  top-stencil
Debug/src/: Makefile  cmake_install.cmake
include/: chrono.h  logging.h  types.h
include/stencil/: comm_handler.h  config.h  init.h  mesh.h  solve.h
scripts/: autotunning_bench.py  venv.sh
src/: CMakeLists.txt  chrono.c  main.c
src/stencil/: comm_handler.c  config.c  init.c  mesh.c  solve.c  tests.c
